--- a/_src/sass/layouts/_homepage.scss
+++ b/_src/sass/layouts/_homepage.scss
@@ -173,8 +173,8 @@
 .page-footer-section.latest-posts {
     width: 100%;
     margin: 0;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: $gutter;
+    padding-right: $gutter;
 }
 
 .page-footer-section.featured-website {
