--- a/_src/sass/mixins/_circle-box-mini.scss
+++ b/_src/sass/mixins/_circle-box-mini.scss
@@ -20,9 +20,9 @@
   &:before {
     $diameter: ($circle-diameter * 0.75);
     @include circle($diameter);
+    @include rem("top", (((($line-px * 1.5) - $diameter) / 2) - 1px));
     @include font-size("large");
     position: absolute;
-    top: (((($line-px * 1.5) - $diameter) / 2) - 1px);
     left: ((($diameter / 4) * -1) - 1px);
     margin-left: (($diameter / 4) * -1);
     border-color: $background;
